--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <span class="form-name">Коментар</span>
             <textarea name="feedback" rows="5" placeholder="Введіть текст"></textarea>
           </label>
-          <button type="submit">Відправити</button>
+          <button class="form-button" type="submit">Відправити</button>
         </form>
       </div>
     </div>
