--- a/index.html
+++ b/index.html
@@ -431,19 +431,29 @@
 
         <form class="form">
           <h3>Залиште свої дані, ми вам передзвонимо</h3>
-          <label>
+
+          <label class="form-field">
             <span class="form-name">Ім'я</span>
             <input type="text" name="text" minlength="5" maxlength="12" />
+            <svg class="icon-input">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
           </label>
 
-          <label>
+          <label class="form-field">
             <span class="form-name">Телефон</span>
             <input type="text" name="text" minlength="5" maxlength="12" />
+            <svg class="icon-input">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
           </label>
 
-          <label>
+          <label class="form-field">
             <span class="form-name">Пошта</span>
-            <input type="email" name="email" />
+            <input type="text" name="text" minlength="5" maxlength="12" />
+            <svg class="icon-input">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
           </label>
 
           <label>
