--- a/index.html
+++ b/index.html
@@ -414,7 +414,12 @@
             <label>
               <div class="enter-login">
                 <input type="text" name="login" placeholder="Enter login:" />
-                <button>Підписатися</button>
+                <button class="button-footer">
+                  Підписатися
+                  <svg class="footer-icon">
+                    <use href="./images/icons.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
               </div>
             </label>
           </div>
@@ -434,7 +439,7 @@
 
           <label class="form-field">
             <span class="form-name">Ім'я</span>
-            <input type="text" name="text" minlength="5" maxlength="12" />
+            <input type="text" name="text" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
@@ -450,7 +455,7 @@
 
           <label class="form-field">
             <span class="form-name">Пошта</span>
-            <input type="text" name="text" minlength="5" maxlength="12" />
+            <input type="text" name="email" minlength="5" maxlength="12" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
