--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
           <label class="form-field">
             <span class="form-name">Телефон</span>
-            <input type="text" name="text" minlength="5" maxlength="12" />
+            <input type="tel" name="phone-number" minlength="5" maxlength="12" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
@@ -463,7 +463,7 @@
 
           <label>
             <span class="form-name">Коментар</span>
-            <textarea name="feedback" rows="5" placeholder="Введіть текст"></textarea>
+            <textarea name="feedback" rows="6" placeholder="Введіть текст"></textarea>
           </label>
           <button class="form-button" type="submit">Відправити</button>
         </form>
