--- a/index.html
+++ b/index.html
@@ -465,8 +465,15 @@
             <span class="form-name">Коментар</span>
             <textarea name="feedback" rows="6" placeholder="Введіть текст"></textarea>
           </label>
-          <button class="form-button" type="submit">Відправити</button>
         </form>
+
+        <label class="box">
+          <input class="custom-input hidden" type="checkbox" name="weekday" value="Mon" checked />
+          <span>понеділок </span>
+          <a href="ukr.net">ukrnet</a>
+        </label>
+
+        <button class="form-button" type="submit">Відправити</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
