--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
           <label class="form-field">
             <span class="form-name">Ім'я</span>
-            <input type="text" name="text" />
+            <input class="input-form" type="text" name="text" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
@@ -447,7 +447,7 @@
 
           <label class="form-field">
             <span class="form-name">Телефон</span>
-            <input type="tel" name="phone-number" minlength="5" maxlength="12" />
+            <input class="input-form" type="tel" name="phone-number" minlength="5" maxlength="12" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
@@ -455,7 +455,7 @@
 
           <label class="form-field">
             <span class="form-name">Пошта</span>
-            <input type="text" name="email" minlength="5" maxlength="12" />
+            <input class="input-form" type="text" name="email" minlength="5" maxlength="12" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
@@ -471,6 +471,9 @@
           <input class="custom-input hidden" type="checkbox" name="weekday" value="Mon" checked />
           <span>понеділок </span>
           <a href="ukr.net">ukrnet</a>
+          <svg class="icon-check">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
         </label>
 
         <button class="form-button" type="submit">Відправити</button>
