--- a/index.html
+++ b/index.html
@@ -411,17 +411,15 @@
           </div>
           <div class="footer-logo">
             <h3 class="footer-heading">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
-            <label>
-              <div class="enter-login">
-                <input type="text" name="login" placeholder="Enter login:" />
-                <button class="button-footer">
-                  Підписатися
-                  <svg class="footer-icon">
-                    <use href="./images/icons.svg#icon-icon-send"></use>
-                  </svg>
-                </button>
-              </div>
-            </label>
+            <div class="enter-login">
+              <input type="text" name="login" placeholder="Enter login:" />
+              <button class="btn-footer">
+                Підписатися
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
