--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <h3 class="footer-heading">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
             <div class="enter-login">
               <input type="text" name="login" placeholder="Enter login:" />
-              <button class="btn-footer">
+              <button type="submit" class="btn-footer">
                 Підписатися
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#icon-icon-send"></use>
@@ -437,7 +437,7 @@
 
           <label class="form-field">
             <span class="form-name">Ім'я</span>
-            <input class="input-form" type="text" name="text" />
+            <input class="input-form" type="text" name="username" />
             <svg class="icon-input">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
@@ -466,7 +466,7 @@
         </form>
 
         <label class="box">
-          <input class="custom-input hidden" type="checkbox" name="weekday" value="Mon" />
+          <input class="custom-input hidden" type="checkbox" name="email" />
           <span class="check-box"></span>
           <span class="lable-name"> Погоджуюся з розсилкою та приймаю </span>
           <a href="ukr.net" class="contract">Умови договору</a>
